# CycleScout

./: .gitignore  Dockerfile  ORtools.py  docker-compose.yml  graph.py  qgis_layers.qgz  requirements.txt  ungizp.py
OSM Import Service/: Dockerfile  import_osm.py
Route Service/: cvp_test.py  pyproject.toml
Route Service/docker/kartoza/: docker-compose.yml
Route Service/sql/: 0000_filter_goffstown.sql  0001_bike_roads.sql  0005_road_endpoints.sql  0040_connected_components_view.sql  0050_contract_bridges.sql  0060_contract_degree2.sql
Route Service/src/graph/: cpp.py  graph_vis.py  route_graph.py
Route Service/src/scratch/: cvp_test.py  graph.py
Route Service/src/service/: graph.py  map.html
Route Service/test/resources/: wandrer-30-03-25.kmz
Route Service/test/resources/kmz/: wandrer-15-06-25-litchfield.kmz  wandrer-15-06-25-londenderry.kmz
Route Service/test/service/: test_graph.py
Route Service/test/unit/: conftest.py
Route Service/test/unit/graph/: test_cpp.py  test_graph_vis.py
Route Service/test/unit/service/: test_graph.py
Strava Import Service/: Dockerfile  docker-compose.yml
Strava Import Service/app/: Dockerfile  activities_100.json  config.py  main.py  requirements.txt
Strava Import Service/app/core/: strava_api.py  (+2 more)
docker/: docker-compose.yml
docker/kartoza/: docker-compose.yml  initdb.sql
sql/: 0000_bike_roads.sql  0010_split_roads.sql  0030_road_topology.sql  bike_roads.sql  check_overlapping_geometries.sql  drop_null_columns.sql  filter_goffstown.sql  road_topology.sql  scratch.sql
sql/functions/: st_almost_equal.sql
(+22 files in other folders)
