[project]
name = "route-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.6",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "momepy>=0.10.0",
    "networkx>=3.5",
    "ortools>=9.13.4784",
    "pyqt6>=6.9.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff.lint]
extend-select = ["B"]
